deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-app-service
spec:
  selector:
    app: ci-cd-app
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
